added template with nursery rhyme

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,4 @@
 <h1>Welcome to Meadowlark Travel</h1>
+{{>weather}}
+<a href="/tours/hood-river">Hood River Tour</a>
+<a href="/tours/oregon-coast">Oregon Coast Tour</a>
