--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Meadowlark Node Website" />
     <title>Meadowlark Travel</title>
+    {{{_sections.head}}}
     {{#if showTests}}
       <link rel="stylesheet" href="/vendor/mocha.css" />
     {{/if}}
@@ -25,5 +27,6 @@
       {{/if}}
       <script>mocha.run();</script>
     {{/if}}
+    {{{_sections.jquery}}}
   </body>
 </html>
